--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">物联网传感器实验箱</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_control">Control</string>
+    <string name="action_settings">设置串口</string>
+    <string name="action_control">控制模块</string>
 </resources>
